@@ -7,6 +7,7 @@ Version TBD
 (released on TBD)
 
 * Make vertical table separator more customizable.
+* Add ability to pass additional preprocessors when formatting output.
 
 
 Version 0.1.0
